--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 POSTGRES_USER=onewave
 POSTGRES_PASSWORD=onewave
 POSTGRES_DB=onewave
-DATABASE_URL=postgresql://onewave:onewave@localhost:5432/onewave
+DATABASE_URL=postgresql://onewave:onewave@db:5432/onewave
 
 # Security
 SECRET_KEY=your-secret-key-here-change-in-production
