--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ DATABASE_URL=postgresql://onewave:onewave@db:5432/onewave
 SECRET_KEY=your-secret-key-here-change-in-production
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=60
+
+# Gemini API
+GEMINI_API_KEY=your-gemini-api-key-here
