--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,5 @@ dependencies = [
     "python-multipart",
     "email-validator",
     "python-dotenv",
-    "google-generativeai",
+    "google-genai",
 ]
