feat: job interview tts

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,9 @@ ACCESS_TOKEN_EXPIRE_MINUTES=60
 
 # Gemini API
 GEMINI_API_KEY=your-gemini-api-key-here
+
+# Google Cloud TTS
+GOOGLE_APPLICATION_CREDENTIALS=/path/to/service-account-key.json
+
+# TTS Settings
+TTS_VOICE_NAME=ko-KR-Wavenet-A
