--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,6 @@ dependencies = [
     "email-validator",
     "python-dotenv",
     "google-genai",
+    "google-generativeai",
+    "google-cloud-texttospeech>=2.17.0",
 ]
